Removed fromExternalFormat and updated openapi
