# src/management-system/src/backend/server/rest-api/process.js
@@ -38,15 +38,6 @@ function toExternalFormat(processMetaData) {
   return newFormat;
 }
 
-function fromExternalFormat(processMetaData) {
-  const newFormat = { ...processMetaData };
-  newFormat.id = processMetaData.definitionId;
-  newFormat.name = processMetaData.definitionName;
-  delete newFormat.definitionId;
-  delete newFormat.definitionName;
-  return newFormat;
-}
-
 processRouter.use(
   '/',
   isAllowed(PERMISSION_VIEW, 'Process', { filter: true }),
@@ -158,7 +149,7 @@ processRouter.put(
     let { bpmn } = body;
 
     try {
-      const newProcessInfo = await updateProcess(definitionsId, fromExternalFormat(body));
+      const newProcessInfo = await updateProcess(definitionsId, body);
       bpmn = bpmn || (await getProcessBpmn(definitionsId));
       res.status(200).json(toExternalFormat({ ...newProcessInfo, bpmn }));
       await ensureOpaSync(`processes/${definitionsId}`, undefined, newProcessInfo);
